--- a/src/webview/renderer.html
+++ b/src/webview/renderer.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; script-src 'unsafe-inline' https://unpkg.com; connect-src https:; img-src data: https:;">
     <title>SELFIES Preview</title>
     <style>
         body {
@@ -34,7 +35,7 @@
         .structure-container {
             margin: 20px 0;
             padding: 20px;
-            background-color: var(--vscode-editor-background);
+            background-color: #ffffff;
             border: 1px solid var(--vscode-panel-border);
             border-radius: 4px;
             min-height: 300px;
@@ -43,8 +44,10 @@
             justify-content: center;
         }
         #structure {
-            width: 100%;
-            max-width: 600px;
+            width: 500px;
+            height: 300px;
+            display: block;
+            border: 1px solid #ccc;
         }
         .properties {
             margin-top: 20px;
@@ -93,17 +96,24 @@
         let smilesDrawer;
 
         // Initialize smiles-drawer when available
-        window.addEventListener('load', () => {
-            if (typeof SmilesDrawer !== 'undefined') {
-                smilesDrawer = new SmilesDrawer.SvgDrawer({
-                    width: 500,
-                    height: 300,
-                    bondThickness: 2,
-                    fontSizeLarge: 14,
-                    fontSizeSmall: 10
-                });
+        function initSmilesDrawer() {
+            if (typeof SmilesDrawer !== 'undefined' && !smilesDrawer) {
+                try {
+                    smilesDrawer = new SmilesDrawer.SvgDrawer({
+                        width: 500,
+                        height: 300,
+                        bondThickness: 2,
+                        fontSizeLarge: 14,
+                        fontSizeSmall: 10
+                    });
+                    console.log('SmilesDrawer initialized successfully');
+                } catch (err) {
+                    console.error('Failed to initialize SmilesDrawer:', err);
+                }
             }
-        });
+        }
+
+        window.addEventListener('load', initSmilesDrawer);
 
         // Listen for messages from extension
         window.addEventListener('message', event => {
@@ -117,6 +127,8 @@
         function updateView(lineInfo) {
             const content = document.getElementById('content');
 
+            console.log('updateView called with:', lineInfo);
+
             if (!lineInfo || lineInfo.error) {
                 content.innerHTML = `
                     <div class="error">
@@ -128,6 +140,8 @@
 
             const { name, expression, selfies, smiles, molecularWeight, formula } = lineInfo;
 
+            console.log('SMILES to render:', smiles);
+
             let html = `
                 <div class="header">
                     <div class="definition-name">${name}</div>
@@ -137,8 +151,8 @@
 
             if (smiles) {
                 html += `
-                    <div class="structure-container">
-                        <canvas id="structure"></canvas>
+                    <div class="structure-container" id="structure-wrapper">
+                        <svg id="structure" width="500" height="300"></svg>
                     </div>
                 `;
             } else {
@@ -191,21 +205,48 @@
 
             content.innerHTML = html;
 
-            // Draw the structure
-            if (smiles && smilesDrawer) {
-                try {
-                    SmilesDrawer.parse(smiles, function(tree) {
-                        smilesDrawer.draw(tree, 'structure', 'light', false);
-                    }, function(err) {
-                        console.error('Error parsing SMILES:', err);
-                        vscode.postMessage({
-                            command: 'error',
-                            text: 'Error drawing molecular structure: ' + err
-                        });
-                    });
-                } catch (err) {
-                    console.error('Error drawing structure:', err);
-                }
+            // Draw the structure after DOM update
+            if (smiles) {
+                // Wait for DOM to update
+                setTimeout(() => {
+                    // Ensure SmilesDrawer is initialized
+                    if (!smilesDrawer) {
+                        initSmilesDrawer();
+                    }
+
+                    if (smilesDrawer) {
+                        try {
+                            const svgElement = document.getElementById('structure');
+                            console.log('SVG element:', svgElement);
+                            console.log('SVG element dimensions:', svgElement?.getAttribute('width'), svgElement?.getAttribute('height'));
+                            if (svgElement) {
+                                console.log('Attempting to draw SMILES:', smiles);
+                                SmilesDrawer.parse(smiles, function(tree) {
+                                    console.log('Parse successful, drawing...');
+                                    smilesDrawer.draw(tree, 'structure', 'light', false);
+                                    console.log('Molecule drawn successfully');
+                                    console.log('SVG after draw:', document.getElementById('structure'));
+                                }, function(err) {
+                                    console.error('Error parsing SMILES:', err);
+                                    const wrapper = document.getElementById('structure-wrapper');
+                                    if (wrapper) {
+                                        wrapper.innerHTML = '<div class="error">Error rendering: ' + err + '</div>';
+                                    }
+                                    vscode.postMessage({
+                                        command: 'error',
+                                        text: 'Error drawing molecular structure: ' + err
+                                    });
+                                });
+                            } else {
+                                console.error('SVG element not found');
+                            }
+                        } catch (err) {
+                            console.error('Error drawing structure:', err);
+                        }
+                    } else {
+                        console.error('SmilesDrawer not available');
+                    }
+                }, 10);
             }
         }
     </script>
