--- a/src/webview/renderer.html
+++ b/src/webview/renderer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; script-src 'unsafe-inline' https://unpkg.com; connect-src https:; img-src data: https:;">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'unsafe-inline'; script-src 'unsafe-inline' https://unpkg.com; connect-src https:; img-src data: https: blob:;">
     <title>SELFIES Preview</title>
     <style>
         body {
@@ -21,11 +21,33 @@
             margin-bottom: 20px;
             padding-bottom: 10px;
             border-bottom: 1px solid var(--vscode-panel-border);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .header-left {
+            flex: 1;
+        }
+        .header-right {
+            display: flex;
+            gap: 8px;
         }
         .definition-name {
             font-size: 1.5em;
             font-weight: bold;
             color: var(--vscode-textLink-foreground);
+        }
+        .download-btn {
+            padding: 6px 12px;
+            background-color: var(--vscode-button-background);
+            color: var(--vscode-button-foreground);
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 0.9em;
+        }
+        .download-btn:hover {
+            background-color: var(--vscode-button-hoverBackground);
         }
         .expression {
             font-family: 'Courier New', monospace;
@@ -144,8 +166,14 @@
 
             let html = `
                 <div class="header">
-                    <div class="definition-name">${name}</div>
-                    <div class="expression">${expression}</div>
+                    <div class="header-left">
+                        <div class="definition-name">${name}</div>
+                        <div class="expression">${expression}</div>
+                    </div>
+                    <div class="header-right">
+                        <button class="download-btn" onclick="downloadSVG()">Download SVG</button>
+                        <button class="download-btn" onclick="downloadPNG()">Download PNG</button>
+                    </div>
                 </div>
             `;
 
@@ -248,6 +276,79 @@
                     }
                 }, 10);
             }
+        }
+
+        // Download SVG function
+        function downloadSVG() {
+            const svgElement = document.getElementById('structure');
+            if (!svgElement) {
+                console.error('SVG element not found');
+                return;
+            }
+
+            // Get the SVG content
+            const svgData = new XMLSerializer().serializeToString(svgElement);
+            const moleculeName = document.querySelector('.definition-name')?.textContent || 'molecule';
+
+            // Send message to extension to save file
+            vscode.postMessage({
+                command: 'saveSVG',
+                svgData: svgData,
+                fileName: `${moleculeName}.svg`
+            });
+
+            console.log('SVG save requested');
+        }
+
+        // Download PNG function
+        function downloadPNG() {
+            const svgElement = document.getElementById('structure');
+            if (!svgElement) {
+                console.error('SVG element not found');
+                return;
+            }
+
+            // Get SVG dimensions
+            const width = parseInt(svgElement.getAttribute('width') || '500');
+            const height = parseInt(svgElement.getAttribute('height') || '300');
+
+            // Create a canvas
+            const canvas = document.createElement('canvas');
+            canvas.width = width;
+            canvas.height = height;
+            const ctx = canvas.getContext('2d');
+
+            // Fill white background
+            ctx.fillStyle = '#ffffff';
+            ctx.fillRect(0, 0, width, height);
+
+            // Convert SVG to data URL
+            const svgData = new XMLSerializer().serializeToString(svgElement);
+            const svgDataUrl = 'data:image/svg+xml;base64,' + btoa(unescape(encodeURIComponent(svgData)));
+            const img = new Image();
+
+            img.onload = function() {
+                ctx.drawImage(img, 0, 0);
+
+                // Convert canvas to PNG data URL
+                const pngDataUrl = canvas.toDataURL('image/png');
+                const moleculeName = document.querySelector('.definition-name')?.textContent || 'molecule';
+
+                // Send message to extension to save file
+                vscode.postMessage({
+                    command: 'savePNG',
+                    pngData: pngDataUrl,
+                    fileName: `${moleculeName}.png`
+                });
+
+                console.log('PNG save requested');
+            };
+
+            img.onerror = function(err) {
+                console.error('Error converting SVG to PNG:', err);
+            };
+
+            img.src = svgDataUrl;
         }
     </script>
 </body>
